--- a/force-app/main/default/classes/MotoService.cls
+++ b/force-app/main/default/classes/MotoService.cls
@@ -3,7 +3,7 @@ public with sharing class MotoService {
 
 public static List<Modelo__c> getAllModelos(){
  return[
-    SELECT Id, Name, Precio__C, Marca__c, Imagen__c
+    SELECT Id, Name, Precio__C, Marca__c, Imagen__c, Procedencia__c
     FROM Modelo__c
  ];
 }
