--- a/force-app/main/default/classes/MotoService.cls
+++ b/force-app/main/default/classes/MotoService.cls
@@ -1,10 +1,13 @@
 public with sharing class MotoService {
 @AuraEnabled(cacheable=true)
 
-public static List<Modelo__c> getAllModelos(){
+public static List<Modelo__c> getFilteredModelos(String searchText){
+   String likeValue = '%' + searchText + '%';
  return[
     SELECT Id, Name, Precio__C, Marca__c, Imagen__c, Procedencia__c
     FROM Modelo__c
+
+    WHERE Name LIKE : likeValue
  ];
 }
 }
